gcc/testsuite/rust/rustc/ui/error-codes/E0092.rs
#![feature(intrinsics)]
extern "rust-intrinsic" {
    fn atomic_foo(); // { dg-error ".E0092." "" { target *-*-* } }
}

fn main() {
}

